<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/main_search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/scansystem_menu_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/menu_select_all"
        app:showAsAction="always" />

</menu>
